--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ yarn-debug.log*
 yarn-error.log*
 
 plan.txt
+
+#temp
+/src/Components/Main
+/src/Components/Nav
+/src/Components/Search
+/src/Components/Sidebar
+
